samples/_failures_safe/1761393455_1c5491_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d1619156.c: In function ‘main’:
./samples/SAFE/__tmp_d1619156.c:167:5: error: expected expression at end of input
  167 |     if (mat2 ==
      |     ^~
./samples/SAFE/__tmp_d1619156.c:167:5: error: expected declaration or statement at end of input
